src2/mixbench-hip/log_run_bench.err
main.cu:66:5: error: cannot initialize a parameter of type 'hipStream_t' (aka 'ihipStream_t *') with an lvalue of type 'float *'
   66 |     hipLaunchKernelGGL(benchmark_func, grid_dim, 0, 0, d_cd, block_dim, i);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_runtime.h:244:46: note: expanded from macro 'hipLaunchKernelGGL'
  244 | #define hipLaunchKernelGGL(kernelName, ...)  hipLaunchKernelGGLInternal((kernelName), __VA_ARGS__)
      |                                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_runtime.h:241:64: note: expanded from macro 'hipLaunchKernelGGLInternal'
  241 |         kernelName<<<(numBlocks), (numThreads), (memPerBlock), (streamId)>>>(__VA_ARGS__);         \
      |                                                                ^~~~~~~~~~
/opt/rocm-6.2.0/include/hip/hip_runtime_api.h:5874:51: note: passing argument to parameter 'stream' here
 5874 |                                       hipStream_t stream __dparm(0));
      |                                                   ^
main.cu:73:5: error: cannot initialize a parameter of type 'hipStream_t' (aka 'ihipStream_t *') with an lvalue of type 'float *'
   73 |     hipLaunchKernelGGL(benchmark_func, grid_dim, 0, 0, d_cd, block_dim, i);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_runtime.h:244:46: note: expanded from macro 'hipLaunchKernelGGL'
  244 | #define hipLaunchKernelGGL(kernelName, ...)  hipLaunchKernelGGLInternal((kernelName), __VA_ARGS__)
      |                                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_runtime.h:241:64: note: expanded from macro 'hipLaunchKernelGGLInternal'
  241 |         kernelName<<<(numBlocks), (numThreads), (memPerBlock), (streamId)>>>(__VA_ARGS__);         \
      |                                                                ^~~~~~~~~~
/opt/rocm-6.2.0/include/hip/hip_runtime_api.h:5874:51: note: passing argument to parameter 'stream' here
 5874 |                                       hipStream_t stream __dparm(0));
      |                                                   ^
2 errors generated when compiling for gfx90a.
failed to execute:/opt/rocm-6.2.0/lib/llvm/bin/clang++  --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a  -std=c++14 -Wall -O3 -c -x hip main.cu -o "main.o"
make: *** [Makefile.AMD:50: main.o] Error 1
